--- a/spark-defaults.conf
+++ b/spark-defaults.conf
@@ -1,25 +1,7 @@
-spark.master=k8s://https://172.20.0.1:443
-spark.rapids.sql.concurrentGpuTasks=1
-spark.rapids.sql.format.csv.read.enabled=false
-spark.rapids.sql.enabled=false
-spark.executor.memory=4G
-spark.executor.cores=4
-spark.task.cpus=1
-spark.task.resource.gpu.amount=0.25
-spark.executor.resource.gpu.amount=1
-spark.executor.memoryOverhead=4G
-spark.rapids.memory.pinnedPool.size=2G
-spark.locality.wait=0s
-spark.sql.files.maxPartitionBytes=512m
-spark.sql.shuffle.partitions=10
-spark.plugins=com.nvidia.spark.SQLPlugin
-spark.executor.resource.gpu.discoveryScript=/opt/sparkRapidsPlugin/getGpusResources.sh
-spark.executor.resource.gpu.vendor=nvidia.com 
-
-#spark.dynamicAllocation.enabled True
-#spark.dynamicAllocation.maxExecutors 3
-#spark.executor.memory 3584m
-#spark.executor.cores 1
-#spark.yarn.executor.memoryOverhead 512m
-#spark.app.name ds-for-telco
-#spark.lineage.enabled false
+spark.dynamicAllocation.enabled True
+spark.dynamicAllocation.maxExecutors 3
+spark.executor.memory 3584m
+spark.executor.cores 1
+spark.yarn.executor.memoryOverhead 512m
+spark.app.name ds-for-telco
+spark.lineage.enabled false
